--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django==6.0
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
+reportlab>=4.0.7
+openpyxl>=3.1.2
+djangorestframework>=3.14.0
+Pillow>=10.4.0
 
