--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,11 @@ reportlab>=4.0.7
 openpyxl>=3.1.2
 djangorestframework>=3.14.0
 Pillow>=10.4.0
+qrcode[pil]>=7.4.2
+python-barcode>=0.15.1
+django-redis>=5.4.0
+django-ratelimit>=4.1.0
+django-extensions>=3.2.3
+celery>=5.3.4
+redis>=5.0.1
 
