--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-dotenv==1.2.1
 reportlab>=4.0.7
 openpyxl>=3.1.2
 djangorestframework>=3.14.0
+drf-spectacular>=0.27.0
 Pillow>=10.4.0
 qrcode[pil]>=7.4.2
 python-barcode>=0.15.1
